fix modal on mobile and add close button

--- a/app/src/components/layout.css
+++ b/app/src/components/layout.css
@@ -100,22 +100,6 @@ p {
   border: solid 3px green;
 }
 
-.branche-modal .branche-modal-paper {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: space-around;
-  text-align: justify;
-  margin:auto;
-  position: absolute;
-  max-width: 60%;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-}
-
-
 
 @media only screen and (max-width: 1100px) {
   html {
@@ -147,4 +131,5 @@ p {
   h1 {
     font-size: 25px;
   }
+
 }
